Services are separated into a separate project

--- a/UI/WebStore/Views/Home/Index.cshtml
+++ b/UI/WebStore/Views/Home/Index.cshtml
@@ -1,5 +1,5 @@
-﻿@using WebStore.Infrastructure.Mapping
-@using WebStore.Interfaces.Service
+﻿@using WebStore.Interfaces.Service
+@using WebStore.Services.Mapping
 @inject IProductData ProductData
 @{
     var products = ProductData
