--- a/UI/WebStore/Views/Catalog/Details.cshtml
+++ b/UI/WebStore/Views/Catalog/Details.cshtml
@@ -1,89 +1,85 @@
-﻿@model WebStore.Domain.ViewModels.CartOrderViewModel
+﻿@model WebStore.Domain.ViewModels.ProductViewModel
 @{
     ViewData["Title"] = "Details";
 }
 
-<section id="cart_items">
+<section>
     <div class="container">
-        <div class="table-responsive cart_info">
-            <table class="table table-condensed">
-                <thead>
-                    <tr class="cart_menu">
-                        <td class="image">Товар</td>
-                        <td class="description"></td>
-                        <td class="price">Цена</td>
-                        <td class="quantity">Количество</td>
-                        <td class="total">Итог</td>
-                        <td></td>
-                    </tr>
-                </thead>
-                <tbody>
-                    @foreach (var (product, quantity) in Model.Cart.Items)
-                    {
-                        <tr>
-                            <td class="cart_product">
-                                <a href=""><img src="~/images/shop/@product.ImageUrl" alt=""></a>
-                            </td>
-                            <td class="cart_description">
-                                <h4>
-                                    <a asp-controller="Catalog" asp-action="Details" asp-route-id="@product.Id">
-                                        @product.Name
-                                    </a>
-                                </h4>
-                                <p>Артикул: @product.Id.ToString("0000000")</p>
-                            </td>
-                            <td class="cart_price">
-                                <p>@product.Price.ToString("C")</p>
-                            </td>
-                            <td class="cart_quantity">
-                                <div class="cart_quantity_button">
-                                    <a asp-controller="Cart"
-                                       asp-action="AddToCart"
-                                       asp-route-id="@product.Id"
-                                       class="cart_quantity_up">
-                                        +
-                                    </a>
-                                    <input class="cart_quantity_input"
-                                           type="text"
-                                           name="quantity"
-                                           value="@quantity"
-                                           autocomplete="off"
-                                           size="2">
-                                    <a asp-controller="Cart"
-                                       asp-action="DecrementFromCart"
-                                       asp-route-id="@product.Id"
-                                       class="cart_quantity_down">
-                                        -
-                                    </a>
+        <vc:bread-crumbs />
+
+        <div class="row">
+            <div class="col-sm-3">
+                <partial name="Partial/_LeftSideBar" />
+            </div>
+
+            <div class="col-sm-9 padding-right">
+                <div class="product-details">
+                    <!--product-details-->
+                    <div class="col-sm-5">
+                        <div class="view-product">
+                            <img src="~/images/product-details/1.jpg" alt="" />
+                            <h3>ZOOM</h3>
+                        </div>
+                        <div id="similar-product" class="carousel slide" data-ride="carousel">
+
+                            <!-- Wrapper for slides -->
+                            <div class="carousel-inner">
+                                <div class="item active">
+                                    <a href=""><img src="~/images/product-details/similar1.jpg" alt=""></a>
+                                    <a href=""><img src="~/images/product-details/similar2.jpg" alt=""></a>
+                                    <a href=""><img src="~/images/product-details/similar3.jpg" alt=""></a>
                                 </div>
-                            </td>
-                            <td class="cart_total">
-                                <p class="cart_total_price">@((product.Price * quantity).ToString("C"))</p>
-                            </td>
-                            <td class="cart_delete">
-                                <a asp-controller="Cart"
-                                   asp-action="RemoveFromCart"
-                                   asp-route-id="@product.Id"
-                                   class="cart_quantity_delete">
-                                    <i class="fa fa-times"></i>
-                                </a>
-                            </td>
-                        </tr>
-                    }
+                                <div class="item">
+                                    <a href=""><img src="~/images/product-details/similar1.jpg" alt=""></a>
+                                    <a href=""><img src="~/images/product-details/similar2.jpg" alt=""></a>
+                                    <a href=""><img src="~/images/product-details/similar3.jpg" alt=""></a>
+                                </div>
+                                <div class="item">
+                                    <a href=""><img src="~/images/product-details/similar1.jpg" alt=""></a>
+                                    <a href=""><img src="~/images/product-details/similar2.jpg" alt=""></a>
+                                    <a href=""><img src="~/images/product-details/similar3.jpg" alt=""></a>
+                                </div>
 
-                </tbody>
-            </table>
+                            </div>
+
+                            <!-- Controls -->
+                            <a class="left item-control" href="#similar-product" data-slide="prev">
+                                <i class="fa fa-angle-left"></i>
+                            </a>
+                            <a class="right item-control" href="#similar-product" data-slide="next">
+                                <i class="fa fa-angle-right"></i>
+                            </a>
+                        </div>
+
+                    </div>
+                    <div class="col-sm-7">
+                        <div class="product-information">
+                            <!--/product-information-->
+                            <img src="~/images/shop/@Model.ImageUrl" class="newarrival" alt="" />
+                            <h2>@Model.Name</h2>
+                            <p>Web ID: @Model.Id.ToString("00000000")</p>
+                            <img src="~/images/product-details/rating.png" alt="" />
+                            <span>
+                                <span>@Model.Price.ToString("C")</span>
+                                <label>Количество:</label>
+                                <input type="text" value="3" />
+                                <button type="button" class="btn btn-default cart">
+                                    <i class="fa fa-shopping-cart"></i>
+                                    В корзину
+                                </button>
+                            </span>
+                            <p><b>Доступность:</b> In Stock</p>
+                            <p><b>Состояние:</b> новое</p>
+                            <p><b>Бренд:</b> @Model.</p>
+                            <a href=""><img src="~/images/product-details/share.png" class="share img-responsive" alt="" /></a>
+                        </div><!--/product-information-->
+                    </div>
+                </div><!--/product-details-->
+
+                <partial name="Partial/_CategoryTab" />
+
+                <partial name="Partial/_RecomendedItems" />
+            </div>
         </div>
     </div>
-</section> <!--/#cart_items-->
-
-<section id="do_action">
-    <div class="container">
-        <div class="heading">
-            <h3>Что бы Вы хотели сделать далее?</h3>
-            <p>Choose if you have a discount code or reward points you want to use or would like to estimate your delivery cost.</p>
-        </div>
-
-        <partial name="Partial/_CheckOut" model="@Model.Order" view-data="@(new ViewDataDictionary(ViewData) { { "TotalPrice", Model.Cart.TotalPrice } })" />
-    </div>
-</section><!--/#do_action-->
+</section>
