Added attributes to the markup with the information necessary for the script to work

--- a/UI/WebStore/Views/Shared/_LayoutSimple.cshtml
+++ b/UI/WebStore/Views/Shared/_LayoutSimple.cshtml
@@ -15,6 +15,7 @@
     <![endif]-->
     <link rel="shortcut icon" href="images/ico/favicon.ico">
 </head><!--/head-->
+<!-- @Url.Action("AddToCart", "CartApi")-->
 
 <body>
     @RenderBody()
