--- a/UI/WebStore/Views/Catalog/Shop.cshtml
+++ b/UI/WebStore/Views/Catalog/Shop.cshtml
@@ -1,5 +1,5 @@
 ﻿@model WebStore.Domain.ViewModels.CatalogViewModel
-<partial name="Partial/_Advertisement"/>
+<partial name="Partial/_Advertisement" />
 
 <section>
     <div class="container">
@@ -10,7 +10,9 @@
             </div>
 
             <div class="col-sm-9 padding-right">
-                <partial name="Partial/_FeaturesItems" model="Model.Products" />
+                <div id="catalog-items-container">
+                    <partial name="Partial/_FeaturesItems" model="Model.Products" />
+                </div>
                 <paging page-model="@Model.PageViewModel"
                         page-action="Shop"
                         page-url-SectionId="@Model.SectionId"
@@ -20,3 +22,15 @@
         </div>
     </div>
 </section>
+
+@section Scripts{
+    <script src="~/lib/jquery-loading-overlay/loadingoverlay.min.js"></script>
+    <script src="~/js/Catalog/CatalogLogic.js" asp-append-version="true"></script>
+    <script>
+        $(function() {
+            Catalog.init({
+                getViewLink: "@Url.Action("GetCatalogHtml","Catalog")"
+            });
+        })
+    </script>
+} 
