--- a/UI/WebStore/Views/Shared/_LayoutSimple.cshtml
+++ b/UI/WebStore/Views/Shared/_LayoutSimple.cshtml
@@ -8,6 +8,7 @@
     <title>Home | E-Shopper</title>
 
     <partial name="Partial/_Styles" />
+    @await RenderSectionAsync("Styles", false)
 
     <!--[if lt IE 9]>
         <script src="js/html5shiv.js"></script>
@@ -21,5 +22,8 @@
     @RenderBody()
 
     <partial name="Partial/_Scripts" />
+    @await RenderSectionAsync("Scripts", false)
+
+
 </body>
 </html>
